--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 18.18.2
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18.18.2
+        node-version: 20.18.0
         cache: 'yarn'
     - run: yarn install --immutable
     - run: yarn test
